--- a/index.html
+++ b/index.html
@@ -3,19 +3,30 @@
   <head>
     <title>Chrome Application</title>
     <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, 
+  initial-scale=1.0"
+    />
     <link rel="stylesheet" href="index.css" />
+    <script
+      src="https://kit.fontawesome.com/440a52aa17.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
     <form class="js-form form">
-      <input type="text" placeholder="what is your name?" />
+      <h6 class="js-welcome"></h6>
+      <input type="text" />
     </form>
 
     <h4 class="js-greetings greeting"></h4>
     <form class="js-toDoForm">
-      <input type="text" placeholder="Write your list to do." />
+      <h6 class="js-toDoQuestion">What is your main focus today?</h6>
+      <input type="text" />
     </form>
     <ul class="js-toDoList"></ul>
     <span class="js-weather"></span>
