--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <h4 class="js-greetings greeting"></h4>
     <form class="js-toDoForm">
-      <h6 class="js-toDoQuestion">What is your main focus today?</h6>
+      <h6 class="js-toDoForm__Question">What is your main focus for today?</h6>
       <input type="text" />
     </form>
     <ul class="js-toDoList"></ul>
