added css lines .etc
added some logic about weather icon, and designed to make better stuffs with css. Next , i will add "check"

--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
     ></script>
   </head>
   <body>
+    <div class="js-weather">
+      <div class="js-weather__column">
+        <i class="js-weather__icon"></i>
+        <span class="js-weather__span1"></span>
+      </div>
+      <div class="js-weather__column">
+        <span class="js-weather__span2"></span>
+        <span class="js-weather__span3"></span>
+      </div>
+    </div>
+    <div></div>
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
@@ -29,7 +40,6 @@
       <input type="text" />
     </form>
     <ul class="js-toDoList"></ul>
-    <span class="js-weather"></span>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="toDo.js"></script>
