--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <span class="js-weather__span3"></span>
       </div>
     </div>
-    <div></div>
+    <div>
+      making list of weather
+    </div>
     <div class="js-clock">
       <h1>00:00</h1>
     </div>
@@ -39,7 +41,9 @@
       <h6 class="js-toDoForm__Question">What is your main focus for today?</h6>
       <input type="text" />
     </form>
-    <ul class="js-toDoList"></ul>
+    <ul class="js-toDoList">
+      
+    </ul>
     <script src="clock.js"></script>
     <script src="greeting.js"></script>
     <script src="toDo.js"></script>
